--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ matplotlib==3.3.4
 networkx==2.5
 numpy==1.20.1
 Pillow==8.1.2
+pydicom==2.1.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
 PyWavelets==1.1.1
 scikit-image==0.18.1
 scipy==1.6.1
+streamlit==0.78.0
 six==1.15.0
 tifffile==2021.3.5
